--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,7 @@
 #pitSwapTitle{
 	font-size: 3.5rem;
 	font-family: 'Faster One', cursive;
+	user-select: none;
 }
 
 nav{
@@ -10,17 +11,6 @@ nav{
 #navContainer{
 	padding-left: 25px;
 	padding-left: 25px;
-}
-
-#searchBar{
-	padding-left: 10px;
-	width: 170px;
-}
-
-#searchIcon{
-	position: absolute;
-	right: 5px;
-	top: 17%;
 }
 
 #logo-container{
