--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,7 @@
+html, body{
+	height: 100%;
+}
+
 #pitSwapTitle{
 	font-size: 3.5rem;
 	font-family: 'Faster One', cursive;
@@ -60,6 +64,10 @@ nav ul a{
     transition: .5s ease all;
 }
 
+.sidenav{
+	width: 250px;
+}
+
 #filtersHeader{
 	padding-left: 10px;
 }
@@ -75,7 +83,7 @@ nav ul a{
 	border-bottom: 3px solid #3161ac;
 }
 
-.productNameAndPrice {
+.productNameAndPrice{
 	padding: 18px 18px 18px 18px;
 	margin-bottom: 0;
 }
@@ -102,9 +110,12 @@ nav ul a{
 	padding: 0;
 }
 
-.card-image{
+.seller-card-image{
 	vertical-align: bottom;
 	border-radius: 0 0 2px 2px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 #searchBar {
