--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,11 +2,21 @@ html, body{
 	height: 100%;
 }
 
-#pitSwapTitle{
-	font-size: 3.5rem;
-	font-family: 'Faster One', cursive;
-	user-select: none;
-	text-align: center;
+#search{
+	position: absolute;
+	top: -12px;
+	height: 35px;
+	padding-left: 5px;
+	box-shadow: none;
+	border: 1px solid #ffffff38;
+}
+
+#search:focus{
+	box-shadow: 0px 0px 19px 1px white;
+}
+
+.input-field input[type=search]{
+	transition: .3s background-color box-shadow;
 }
 
 .pit-blue{
@@ -34,6 +44,13 @@ nav ul a{
 	font-size: 1.5rem;
 }
 
+#pitSwapTitle{
+	font-size: 3.5rem;
+	font-family: 'Faster One', cursive;
+	user-select: none;
+	text-align: center;
+}
+
 #navContainer{
 	padding-left: 25px;
 	padding-left: 25px;
@@ -56,8 +73,10 @@ nav ul a{
 	height: 100%;
 	left: 0;
 	margin: 0;
-	padding-bottom: 60px;
 	padding-top: 120px;
+	padding-bottom: 60px;
+	padding-left: 10px !important;
+	padding-right: 10px !important;
 	position: fixed;
 	top: 0;
 	transition: .5s ease all;
@@ -67,10 +86,6 @@ nav ul a{
 
 .sidenav{
 	width: 250px;
-}
-
-#filtersHeader{
-	padding-left: 10px;
 }
 
 #header{
