added many required pages, and at least placeholder content for all but account page, querying database is now done through nodeJS, and any backend requiring security will be done through php, added button to all pages to post product, form added to posting product, sidenav and tag functionality temporarily removed for time constraints and styling issues

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -88,7 +88,7 @@ nav ul a{
 	width: 250px;
 }
 
-#header{
+.myHeader{
 	width: fit-content;
 	padding: 5px;
 	border-left: 3px solid #3161ac;
@@ -185,3 +185,36 @@ nav ul a{
 		
 	}
 }
+
+@media only screen and (max-width: 1300px){
+	.navLinks > li > a {
+		font-size: 14px;
+	}
+}
+
+#postProductBtn{
+	height: 100px;
+	width: 100px;
+}
+
+#postProductBtn:hover{
+	background-color: #3161ac;
+}
+
+#postProductBtn:active{
+	background-color: #3161ac;
+}
+
+#addProductIcon{
+	line-height: 100px;
+	font-size: 3.6rem;
+}
+
+.btn:hover{
+	background-color: #3161ac;
+}
+
+.btn:active{
+	background-color: #3161ac;
+}
+
