account page is prepared to fill page dynamically-needs to properly receive currently logged in user, account page styles are fixed, posting product to node set up-needs to be fixed, card creating function for users set up, user cards dispaly properly using same styles as product cards for consistency

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -165,14 +165,11 @@ nav ul a{
 .integratedIridologyTextbook{
 	background-image: url("../images/verticalTextbookExample.jpg");
 }
-/*****************/
-.seller-card-image{
-	vertical-align: bottom;
-	border-radius: 0 0 2px 2px;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
+
+.frankSinatra{
+	background-image: url('../images/frankSinatra.jpg');
 }
+/*****************/
 
 #searchBar {
 	width: 180px;
