--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -148,6 +148,11 @@ nav ul a{
 
 .productImage{
 	
+	background-size: contain;	
+ 	background-repeat: no-repeat;	
+	background-position: center;	
+	height: 250px;	
+	width: 100%;
 }
 /*****************/
 #greenPlanet{
