checker and fixer for duplicate image added, thank you page added that links back to home screen, added loading icon next to post product button once it is pressed and waiting for the product to post to db, added sanitizing of filename.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -207,6 +207,12 @@ nav ul a{
 	background-color: #3161ac;
 }
 
+#loadingIconHolder{
+	margin-left: 25px;
+	display: inline-block;
+	vertical-align: middle;
+}
+
 #addProductIcon{
 	line-height: 100px;
 	font-size: 3.6rem;
@@ -224,4 +230,12 @@ nav ul a{
 .postProductHolder{
 	margin-right: 20px;
 	margin-bottom: 20px;
+}
+
+#thankYouPageLogo{
+	height: 15rem;
+}
+
+#productPrice{
+	width: 7rem;
 }
