--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -179,18 +179,22 @@ nav ul a{
 	height: 250px;	
 	width: 100%;
 }
-/*****************/
-#greenPlanet{
-	background-image: url("../siteImages/green-planet.jpg");
+
+.deleteProductBtn{
+	position: absolute!important;
+	right: 10px!important;
+	bottom: 10px!important;
 }
-/*****************/
+
+.deleteIcon{
+	font-size: 3.6rem!important;
+	line-height: 13px!important;
+}
 
 #searchBar {
 	width: 180px;
 	padding-left: 10px;
 	box-sizing: border-box;
-	/*border-top: 2px solid #29b6f6;
-	border-bottom: 2px solid #29b6f6;*/
 	border: 2px solid #3161ac;
 }
 
